# AksaraIndonesia

./: .gitignore  LICENSE  README.md
backend/: .env  Cargo.toml  build.rs
backend/.sqlx/: query-066bf35c9008db06acf131589bf1ddc58d4e18d8d5feeabe6f7aadcdc10769e7.json  query-32abc31d76a2ebdb9712c8bad2eb303b5eda1080e22dca29cd3611f591d43512.json  query-3e459f106c8b4d472bb18275d67ca51ab32d9cec66de515d2edd09ca588ed9ac.json  query-4b3caa571513738ef1770a1318e255703a0b7e9b74def99f0e0070a305fd2aeb.json  query-4f692c4b531ee962db76fafc46eb4be3bc7368dfb1967881d2738a5c5d440d86.json  query-5f36684b0bd882837956c0375bd53cfcfbc211de90a18dec4b6e6fd16929e428.json  query-62494eb01728341ef84fcbe3ea442b0fa4dc98a4de0b7cce19f90a4550a5f903.json  query-77dd1595ad3b66ecf06ffce2860a512e7641ca3f9c37b0fc74626728e0983b7f.json  query-7882057b6e62ab9cf14e94708b9ec1142bb1e31f4b975d6f34d3680b678150cb.json  query-7f31d177ffdde77b93eaa4aa37baedc9071d124c7497bdf91e5fc7b9ab3e5720.json  query-b3d83656c781dc13791f73868766b0de30c649f5388f63039449f2f590a84ba9.json  query-ba8d16c7d65aab705ca42785b6d8ad71c0353d9a4c0a6c1716581ffe5d5bae0d.json  query-f3c6663762f676fb14cd1003aef9f8f3b13e211a0857fe17161384a2849640db.json
backend/migrations/: 20251023072617_create_bapas_table.sql  20251023072737_create_users_table.sql  20251027022549_create_klien_schema.sql  20251027050452_create_anak_schema.sql  20251027142411_add_online_akses_to_wajib_lapor.sql  20251027142919_refine_wajib_lapor_logic.sql  20251027143551_add_kiosk_method_to_wajib_lapor.sql  20251029144108_create_foundational_tables.sql  20251031124838_token.sql  (+12 more)
(+64 files in other folders)
